--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
 title: Unofficial Lost Peatlands
-subtitle: 
+subtitle:  This is website compiled by Mike Shewring to host code and data from the Heritage Lottery Funded Lost Peatlands of South Wales project. 
 ---
 
